// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventReporter.command 1`] = `
Array [
  Object {
    "data": "foobar",
    "type": "command",
  },
]
`;

exports[`EventReporter.error 1`] = `
Array [
  Object {
    "data": "foobar",
    "type": "error",
  },
]
`;

exports[`EventReporter.finished 1`] = `
Array [
  Object {
    "data": 0,
    "type": "finished",
  },
]
`;

exports[`EventReporter.info 1`] = `
Array [
  Object {
    "data": "foobar",
    "type": "info",
  },
]
`;

exports[`EventReporter.log 1`] = `
Array [
  Object {
    "data": "foobar",
    "type": "log",
  },
]
`;

exports[`EventReporter.step 1`] = `
Array [
  Object {
    "data": Object {
      "current": 1,
      "message": "foobar",
      "total": 5,
    },
    "type": "step",
  },
]
`;

exports[`EventReporter.success 1`] = `
Array [
  Object {
    "data": "foobar",
    "type": "success",
  },
]
`;

exports[`EventReporter.warn 1`] = `
Array [
  Object {
    "data": "foobar",
    "type": "warning",
  },
]
`;
